style.css
/* ... */
ul#menu-my-favorite-links {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -ms-flex-line-pack: center;
      align-content: center; }

@media screen and (min-width: 56em) {
  ul#menu-my-favorite-links {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
    -webkit-box-pack: space-evenly;
        -ms-flex-pack: space-evenly;
            justify-content: space-evenly;
    -webkit-box-align: baseline;
        -ms-flex-align: baseline;
            align-items: baseline;
    min-width: 600px; } }

/*----------Social Links Widget----------*/
ul#menu-social-menus {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center; }

@media screen and (min-width: 48em) {
  .social-navigation {
    float: none;
    margin-bottom: 0;
    width: 100%; } }

@media screen and (min-width: 56em) {
  .social-navigation + .site-info {
    margin-left: 0px; } }

@media screen and (min-width: 56em) {
  .site-info {
    float: none;
    padding: 2em 0 0;
    width: 100%; } }

/*----------Site Info Section----------*/
.site-info {
  text-align: center; }

@media screen and (min-width: 48em) {
  .social-navigation + .site-info {
    margin-left: 0%; } }

@media screen and (min-width: 48em) {
  .site-info {
    float: none;
    padding: 2.7em 0 0;
    width: 100%; } }

/*-----------------------------------------------------------------------------
4.0 Sub Pages
-----------------------------------------------------------------------------*/
/* styles for no header image page */
.entry-header-no-image h1 {
  margin-top: 1em; }

/*----------Page Headers----------*/
.page:not(.home) {
  padding-top: 0em; }

@media screen and (min-width: 56em) {
  .page:not(.home) #content {
    padding-bottom: 0;
    padding-top: 0em; } }

.header-wrap {
  min-height: 450px; }

.wrap-bg-overlay {
  min-height: 450px;
  background: rgba(255, 255, 255, 0.61176);
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center; }

.single-featured-image-header {
  height: 300px; }

.page.page-one-column:not(.twentyseventeen-front-page) #primary {
  margin-left: 0px;
  margin-right: 0px;
  max-width: none; }

body.page:not(.twentyseventeen-front-page) .entry-title {
  color: #414042;
  font-size: 5em;
  text-align: center;
  font-weight: 800;
  text-transform: none;
  margin-bottom: 0px;
  letter-spacing: 3px; }

h2.subheading {
  padding-top: 0em;
  padding-left: 5em;
  padding-right: 5em;
  color: #414042;
  text-align: center;
  text-shadow: 0px 0px 28px rgba(255, 255, 255, 0.41961); }

@media screen and (min-width: 56em) {
  .subheading h2 {
    padding-left: 3em;
    padding-right: 3em;
    padding-top: 1em;
    color: #414042; } }

.h2--white, .h3--white {
  color: #fff; }

.h3--big {
  font-size: 2em; }

/*----------Entry Content Area----------*/
.margin-wrap {
  margin-left: 3em;
  margin-right: 3em; }

@media screen and (min-width: 780px) {
  .margin-wrap {
    margin-left: 0px;
    margin-right: 0px; } }

.page:not(.home) #content {
  padding-bottom: 0; }

.entry-content {
  max-width: 1260px;
  margin-left: 1em;
  margin-right: 1em; }

.entry-content-full-width {
  max-width: none;
  margin-left: 0;
  margin-right: 0; }

.wrap-full-page .entry-content-grid {
  display: grid;
  grid-template-columns: 1fr 10fr 1fr;
  max-width: none; }

.page-template-page-full-width .ugb-container .ugb-container__content-wrapper {
  padding-left: 15vw;
  padding-right: 15vw; }

.section-container {
  grid-column-start: 1;
  grid-column-end: 4;
  display: grid;
  grid-template-columns: 1fr 5fr 1fr;
  width: 100%; }

.section-container-content {
  padding: 1.4em;
  grid-column-start: 2;
  grid-column-end: 3;
  padding-top: 7.5em;
  padding-bottom: 7.5em; }

.section-container:nth-of-type(1) {
  padding-top: 1em; }

.section-container:nth-child(even) {
  background-color: #f6f9f0; }

.section-container-content h2 {
  text-align: center; }

.section-container img {
  display: block;
  margin: 0 auto;
  justify-self: center; }

.section-container h2 {
  grid-column-start: 2;
  grid-column-end: 3; }

.section-container p {
  grid-column-start: 2;
  grid-column-end: 3; }

.address-left-of-map {
  line-height: .5em; }

/*-----------------------------------------------------------------------------
4.0 Serving Opportunities Pods
-----------------------------------------------------------------------------*/
.serving-opportunity-list-container {
  display: grid;
  grid-template-columns: 1fr;
  max-width: 1000px;
  margin-left: auto;
  margin-right: auto; }

.serving-opportunity-cover {
  background-size: cover;
  width: 90vw;
  height: 90vw;
  line-height: 300px;
  vertical-align: middle; }

@media screen and (min-width: 500px) {
  .serving-opportunity-cover {
    height: 300px; } }

@media screen and (min-width: 1000px) {
  .serving-opportunity-cover {
    width: 300px;
    height: 300px; } }

.serving-opportunity-cover h2 {
  font-size: 6em;
  font-weight: 900;
  line-height: 86px;
  vertical-align: middle;
  display: inline-block;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  text-transform: uppercase;
  opacity: 0.8;
  word-break: break-word; }

.serving-opportunity-list-container * h2 {
  visibility: hidden; }
/* ... */

